; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_test-ipv4ll.c_arp_send_probe.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_test-ipv4ll.c_arp_send_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ether_addr = type { i32 }
%struct.ether_arp = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arp_send_probe(i32 %0, i32 %1, i64 %2, %struct.ether_addr* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.ether_addr*, align 8
  %9 = alloca %struct.ether_arp, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store %struct.ether_addr* %3, %struct.ether_addr** %8, align 8
  %10 = bitcast %struct.ether_arp* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %10, i8 0, i64 4, i1 false)
  %11 = load i32, i32* %5, align 4
  %12 = icmp sge i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert_se(i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = icmp sgt i32 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert_se(i32 %17)
  %19 = load i64, i64* %7, align 8
  %20 = icmp ne i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert_se(i32 %21)
  %23 = load %struct.ether_addr*, %struct.ether_addr** %8, align 8
  %24 = ptrtoint %struct.ether_addr* %23 to i32
  %25 = call i32 @assert_se(i32 %24)
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @arp_network_send_raw_socket(i32 %26, i32 %27, %struct.ether_arp* %9)
  ret i32 %28
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @assert_se(i32) #2

declare dso_local i32 @arp_network_send_raw_socket(i32, i32, %struct.ether_arp*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
